# video-to-splat

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
docs/: api.md
server/: main.py  pipeline.py  presets.py
server/stages/: export.py  frames.py  poses_colmap.py  poses_da3.py  sfm_common.py  train_brush.py
web/: app.js  index.html  viewer.js
web/shims/: pass.js
